--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
+							
 							<h1>Hi, I am William</h1>
 							<p>A personal trainer<br> with 4 years of experience</p>
 							<ul class="actions">
@@ -55,14 +56,15 @@
 						<div class="content">
 							<p><strong>I am not muscle hypertrophy specialized</strong> Due to the sport I am playing, I have to control my weight to compete in certain weight class.
 								 However, I have a lot of experience of boosting sport performance and change body composition. </p>
-							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Boost Sport Performance</li>
-								<li class="icon solid fa-bolt">Changing Body composition</li>
-								<li class="icon solid fa-signal">Posture correction</li>
-								<li class="icon solid fa-cog">Improving joint stability</li>
-								<li class="icon solid fa-map-marker-alt">Endurance training</li>
-								<li class="icon solid fa-code">Increase Range of Motion</li>
-							</ul>
+								 <ul class="feature-icons">
+									<li class="icon solid fa-dumbbell">Boost Sport Performance</li>
+									<li class="icon solid fa-chart-bar">Changing Body Composition</li>
+									<li class="icon solid fa-child">Posture Correction</li>
+									<li class="icon solid fa-shield-alt">Improving Joint Stability</li>
+									<li class="icon solid fa-running">Endurance Training</li>
+									<li class="icon solid fa-arrows-alt">Increase Range of Motion</li>
+								</ul>
+								
 							<p>My approach aims at achieving optimal athletic results while maintaining the necessary weight for competitive success."</p>
 						</div>
 					</section>
