--- a/index-chinese.html
+++ b/index-chinese.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>健身教练</title>
+		<title>Trainer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -21,14 +21,14 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Hi, I am William</h1>
-							<p>A personal trainer<br> with 6 years of experience</p>
+							<h1>你好，我是William</h1>
+							<p>一个有四年经验的健身教练</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/gallery/fulls/training-10 (1).jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/gallery/fulls/training-11.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -38,50 +38,56 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p><strong>我是William，一名大四的运动机能学学生，并且是一位认证的健身教练</strong> 其实我身为运动员的经验是远远超过于我作为健身教练的经验的
+								在加拿大高中的时候，我就曾是摔跤和长跑队的一员。直到现在，我是一名McMaster柔术队的一员.。
+								现在我运用我身为运动员的经验和运动机能学的知识帮助我的顾客达到他们的目标和提升运动表现
+							</p>
+							<span class="image main"><img src="images/gallery/fulls/training-03 (2).jpg" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>我的专注领域</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong>不难看出其实我并不是一名肌肉</strong> Due to the sport I am playing, I have to control my weight to compete in certain weight class.
+								 However, I have a lot of experience of boosting sport performance and change body composition. </p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+								<li class="icon solid fa-laptop">Boost Sport Performance</li>
+								<li class="icon solid fa-bolt">Changing Body composition</li>
+								<li class="icon solid fa-signal">Posture correction</li>
+								<li class="icon solid fa-cog">Improving joint stability</li>
+								<li class="icon solid fa-map-marker-alt">Endurance training</li>
+								<li class="icon solid fa-code">Increase Range of Motion</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>My approach aims at achieving optimal athletic results while maintaining the necessary weight for competitive success."</p>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>More Q/A</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>I understand some clients might have concern</strong> that it is a relatively slim person who train them instead of a 
+								jet person here I will post some images of my training
+							</p>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>Image Gallery</h3>
+										<p></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/training-04 (1).jpg" class="landscape"><img src="images/gallery/fulls/training-04 (1).jpg" alt="" /></a>
+											<a href="images/gallery/fulls/training-05 (2).jpg"><img src="images/gallery/fulls/training-05 (2).jpg" alt="" /></a>
+											<a href="images/gallery/fulls/training-06 (1).jpg"><img src="images/gallery/fulls/training-06 (1).jpg" alt="" /></a>
+											<a href="images/gallery/fulls/training-08.jpg" class="landscape"><img src="images/gallery/fulls/training-08.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -89,14 +95,12 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>Canfitpro Certification</h3>
+										<p>On the right is the Certification, I have now, in the future I hope to fulfill this gallary and excited for the furture journey</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/training-15.jpg" class="landscape"><img src="images/gallery/fulls/training-15.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -104,14 +108,12 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>Competetion</h3>
+										<p>I am competing in McMaster JiuJi-stu team right now, on the right is the link of video I get second place in McMaster 155-175 weight class</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a class="landscape"><iframe width="560" height="315" src="https://www.youtube.com/embed/8lZbIl1EiVM?si=CnjZpO0wqBkM-ViQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></a>
 										</div>
 									</div>
 								</section>
@@ -122,10 +124,10 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Duis sed adpiscing veroeros amet</h2>
+							<h2>Blogs and content</h2>
 						</header>
 						<div class="content">
-							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
+							<p><strong>As a Kinesiology student</strong> I am trying to create some content and give some indication for fitness in the future. Here is the little red book and in this site. I mean hopefully in the future. </p>
 							<ul class="actions">
 								<li><a href="#" class="button primary large">Get Started</a></li>
 								<li><a href="#" class="button large">Learn More</a></li>
@@ -407,57 +409,64 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
-							<form>
-								<div class="fields">
-									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="button primary" /></li>
-								</ul>
-							</form>
+							<p><strong>Greatly thanksful</strong> for Xiao Wu and little Dragon help on the build up of this website, without your
+							guys I cannot image how the site can be set up that easily. If you have interested in taking photography or help in doing a e-profolio page
+						here is their information.<br>
+						</p>
+						<div class="popup" onclick="myFunction(this)">
+							<strong>Photographer/ Wu</strong>
+							<span class="popuptext">
+							  <img src="images/gallery/fulls/profile2.jpg" alt="Image" width="150" height="150">
+							</span>
+						  </div>
+						  <br>
+						  <div class="popup" onclick="myFunction(this)">
+							<strong>Web Developer/ Little Dragon</strong>
+							<span class="popuptext">
+							  <img src="images/gallery/fulls/profile3.png" alt="Image" width="150" height="150">
+							</span>
+						  </div>
 						</div>
 						<footer>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">yew19@mcmaster.ca</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">(416) 912-3316</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>Hamilton</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
-									</ul>
+									<div class="popup" onclick="myFunction(this)">
+										<ul class="icons">
+											<li><a class="icon brands alt fa-weixin"><span class="label">WeChat</span></a></li>
+										</ul>
+										<span class="popuptext">
+										  <img src="images/gallery/fulls/profile4.jpg" alt="Image" width="150" height="150">
+										</span>
+									  </div>
 								</li>
 							</ul>
 						</footer>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Trainer. All rights reserved.</a>.</div>
 
 			</div>
+			<script>
+				// When the user clicks on <div>, open the popup
+					function myFunction(element) {
+  var popup = element.querySelector('.popuptext');
+  popup.classList.toggle("show");
+}
+				</script>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
