--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/gallery/fulls/training-11.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/gallery/fulls/training-03 (2).jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -44,7 +44,7 @@
 								I have been invloving in High school track and wrestling team to compete. Until university I finally settle in the JiuJi-stu team in McMaster now. 
 								Now I ultilize my background in sports to help my client to reach their fitness goal while avoid injury.
 							</p>
-							<span class="image main"><img src="images/gallery/fulls/training-03 (2).jpg" alt="" /></span>
+							<span class="image main"><img src="images/gallery/fulls/training-11.jpg" alt="" /></span>
 						</div>
 					</section>
 
