--- a/index-chinese.html
+++ b/index-chinese.html
@@ -24,25 +24,33 @@
 							<h1>你好，我是William</h1>
 							<p>一个有四年经验的健身教练</p>
 							<ul class="actions">
+								<label class="language-switcher" id="languageToggle">
+									<input type="checkbox">
+									<span class="slider round"></span>
+									<span class="select-fr">CH</span>
+									<span class="select-en">EN</span>
+								  </label>
+							</ul>
+							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/gallery/fulls/training-11.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/gallery/fulls/training-03 (2).jpg" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>About Me</h2>
+							<h2>关于我</h2>
 						</header>
 						<div class="content">
-							<p><strong>我是William，一名大四的运动机能学学生，并且是一位认证的健身教练</strong> 其实我身为运动员的经验是远远超过于我作为健身教练的经验的
+							<p><strong>我是William，一名大四的运动机能学学生，并且是一位认证的健身教练</strong> 其实我身为运动员的经验是远远超过于我作为健身教练的经验的，
 								在加拿大高中的时候，我就曾是摔跤和长跑队的一员。直到现在，我是一名McMaster柔术队的一员.。
 								现在我运用我身为运动员的经验和运动机能学的知识帮助我的顾客达到他们的目标和提升运动表现
 							</p>
-							<span class="image main"><img src="images/gallery/fulls/training-03 (2).jpg" alt="" /></span>
+							<span class="image main"><img src="images/gallery/fulls/training-11.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -52,34 +60,35 @@
 							<h2>我的专注领域</h2>
 						</header>
 						<div class="content">
-							<p><strong>不难看出其实我并不是一名肌肉</strong> Due to the sport I am playing, I have to control my weight to compete in certain weight class.
-								 However, I have a lot of experience of boosting sport performance and change body composition. </p>
+							<p><strong>不难看出其实我并不是一名肌肥大的教练</strong> 由于我的运动对于我的体重和量级有较高的要求，我不得不时刻关注我的体重并且进行减重。
+							但是我对于提升耐力，提升运动表现和减脂有着丰富的经验。我的理念是建立有用的肌肉，而不影响到顾客的运动范围，体重和运动表现。 </p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Boost Sport Performance</li>
-								<li class="icon solid fa-bolt">Changing Body composition</li>
-								<li class="icon solid fa-signal">Posture correction</li>
-								<li class="icon solid fa-cog">Improving joint stability</li>
-								<li class="icon solid fa-map-marker-alt">Endurance training</li>
-								<li class="icon solid fa-code">Increase Range of Motion</li>
+								<li class="icon solid fa-dumbbell">提升运动表现</li>
+								<li class="icon solid fa-exchange-alt">改变身体组成</li>
+								<li class="icon solid fa-user-check">姿态矫正</li>
+								<li class="icon solid fa-shield-alt">提高关节稳定性</li>
+								<li class="icon solid fa-running">耐力训练</li>
+								<li class="icon solid fa-expand-arrows-alt">提升运动范围</li>
 							</ul>
-							<p>My approach aims at achieving optimal athletic results while maintaining the necessary weight for competitive success."</p>
+							
+							<p>我的理念是建立实用性的肌肉，而不影响到顾客的运动范围，体重和运动表现。</p>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>More Q/A</h2>
+							<h2>更多的问题</h2>
 						</header>
 						<div class="content">
-							<p><strong>I understand some clients might have concern</strong> that it is a relatively slim person who train them instead of a 
-								jet person here I will post some images of my training
+							<p><strong>我了解很多顾客的疑问</strong> 一位没有那么“大”的健身教练真的可以给我带来我想要的结果吗，但是决定一名教练的绝对不仅仅是他的肌肥大，
+								更多的是他的知识和专业水平不是每个人训练的目的都是更大的肌肉，有些人追求的是更好的身体组成，生活质量以及运动表现。
 							</p>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Image Gallery</h3>
+										<h3>训练照片</h3>
 										<p></p>
 									</header>
 									<div class="content">
@@ -95,8 +104,8 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Canfitpro Certification</h3>
-										<p>On the right is the Certification, I have now, in the future I hope to fulfill this gallary and excited for the furture journey</p>
+										<h3>Canfitpro 证书</h3>
+										<p>右边是我目前在canfitpro的证书，我很期待在未来有机会增加我证书的数量并且期盼这段精彩的旅程</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -108,8 +117,8 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Competetion</h3>
-										<p>I am competing in McMaster JiuJi-stu team right now, on the right is the link of video I get second place in McMaster 155-175 weight class</p>
+										<h3>竞赛</h3>
+										<p>这是我在McMaster 柔术比赛 155到175的量级中拿到了亚军的视频，期望在未来有着可以参加更多竞赛的机会</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -124,13 +133,13 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Blogs and content</h2>
+							<h2>个人博客</h2>
 						</header>
 						<div class="content">
-							<p><strong>As a Kinesiology student</strong> I am trying to create some content and give some indication for fitness in the future. Here is the little red book and in this site. I mean hopefully in the future. </p>
+							<p><strong>作为一个运动机能学学生</strong> 我在未来会尝试产出一些有用的训练笔记和建议（大概率在小红书上就是了）</p>
 							<ul class="actions">
-								<li><a href="#" class="button primary large">Get Started</a></li>
-								<li><a href="#" class="button large">Learn More</a></li>
+								<li><a href="#" class="button primary large">点这</a></li>
+								<li><a href="#" class="button large">更多</a></li>
 							</ul>
 						</div>
 					</section>
@@ -406,22 +415,20 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Get in touch</h2>
+							<h2>联系我们</h2>
 						</header>
 						<div class="content">
-							<p><strong>Greatly thanksful</strong> for Xiao Wu and little Dragon help on the build up of this website, without your
-							guys I cannot image how the site can be set up that easily. If you have interested in taking photography or help in doing a e-profolio page
-						here is their information.<br>
+							<p><strong>特别鸣谢</strong> 小龙和吴，帮助我的摄影以及网站设计的编写，如果有需要的人，可以点击他们的名字就可以出现他们的联系方式了<br>
 						</p>
 						<div class="popup" onclick="myFunction(this)">
-							<strong>Photographer/ Wu</strong>
+							<strong>摄影师/ 吴</strong>
 							<span class="popuptext">
 							  <img src="images/gallery/fulls/profile2.jpg" alt="Image" width="150" height="150">
 							</span>
 						  </div>
 						  <br>
 						  <div class="popup" onclick="myFunction(this)">
-							<strong>Web Developer/ Little Dragon</strong>
+							<strong>网站编程和设计/ 小🐉</strong>
 							<span class="popuptext">
 							  <img src="images/gallery/fulls/profile3.png" alt="Image" width="150" height="150">
 							</span>
@@ -430,19 +437,19 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						<footer>
 							<ul class="items">
 								<li>
-									<h3>Email</h3>
+									<h3>邮箱</h3>
 									<a href="#">yew19@mcmaster.ca</a>
 								</li>
 								<li>
-									<h3>Phone</h3>
+									<h3>电话</h3>
 									<a href="#">(416) 912-3316</a>
 								</li>
 								<li>
-									<h3>Address</h3>
+									<h3>地址</h3>
 									<span>Hamilton</span>
 								</li>
 								<li>
-									<h3>Elsewhere</h3>
+									<h3>更多联系方式</h3>
 									<div class="popup" onclick="myFunction(this)">
 										<ul class="icons">
 											<li><a class="icon brands alt fa-weixin"><span class="label">WeChat</span></a></li>
@@ -463,9 +470,17 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 			<script>
 				// When the user clicks on <div>, open the popup
 					function myFunction(element) {
-  var popup = element.querySelector('.popuptext');
-  popup.classList.toggle("show");
-}
+				var popup = element.querySelector('.popuptext');
+				popup.classList.toggle("show");
+				}
+				document.addEventListener('DOMContentLoaded', function () {
+				var languageToggle = document.getElementById('languageToggle');
+
+				languageToggle.addEventListener('change', function () {
+					var newUrl = languageToggle.checked ? 'index.html' : 'index.html';
+					window.location.href = newUrl;
+				});
+			});
 				</script>
 
 		<!-- Scripts -->
