--- a/index-chinese.html
+++ b/index-chinese.html
@@ -477,7 +477,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				var languageToggle = document.getElementById('languageToggle');
 
 				languageToggle.addEventListener('change', function () {
-					var newUrl = languageToggle.checked ? 'index.html' : 'index.html';
+					var newUrl = languageToggle.checked ? '' : 'index.html';
 					window.location.href = newUrl;
 				});
 			});
