--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				var languageToggle = document.getElementById('languageToggle');
 
 				languageToggle.addEventListener('change', function () {
-					var newUrl = languageToggle.checked ? 'index-chinese.html' : 'index-chinese.html';
+					var newUrl = languageToggle.checked ? '' : 'index-chinese.html';
 					window.location.href = newUrl;
 				});
 			});
