--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content">
-							<p><strong>I am William Ye, a currently level 4 years Kinesiology student, and a certified personal trainer.</strong> Honestly, I have more experienced of being an athelete than a trainer.
+							<p><strong>I am William Ye, a 4th years Kinesiology student, and a certified personal trainer.</strong> Honestly, I have experience of both being an athelete and a trainer.
 								 During my years of shool, 
-								I have been invloving in High school track and wrestling team to compete. Until university I finally settle in the JiuJi-stu team in McMaster now. 
+								I have been invloving in High school track and wrestling team to compete. Until university I finally settle in the JiuJit-stu team in McMaster now. 
 								Now I ultilize my background in sports to help my client to reach their fitness goal while avoid injury.
 							</p>
 							<span class="image main"><img src="images/gallery/fulls/training-11.jpg" alt="" /></span>
@@ -65,7 +65,7 @@
 							<p><strong>I am not muscle hypertrophy specialized</strong> Due to the sport I am playing, I have to control my weight to compete in certain weight class.
 								 However, I have a lot of experience of boosting sport performance and change body composition. </p>
 								 <ul class="feature-icons">
-									<li class="icon solid fa-dumbbell">Boost Sport Performance</li>
+									<li class="icon solid fa-dumbbell">Enhance Sport Performance</li>
 									<li class="icon solid fa-chart-bar">Changing Body Composition</li>
 									<li class="icon solid fa-child">Posture Correction</li>
 									<li class="icon solid fa-shield-alt">Improving Joint Stability</li>
@@ -80,11 +80,13 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>More Q/A</h2>
+							<h2>More Q&A</h2>
 						</header>
 						<div class="content">
-							<p><strong>I understand some clients might have concern</strong> that it is a relatively slim person who train them instead of a 
-								jet person here I will post some images of my training
+							<p><strong>Q:</strong>you don't seem that jacked, how are you capable of instructing me?</p>
+							<p><strong>A:</strong> As an athelete specialized in JiuJit-sjtu, I have to control my body weight to compete in my weight class.
+								However, my capability to guide and instruct is based in years of extensive experience, education, and a comprehensive understanding of sports,
+								 clinic work, and personal training. I believe my knowledge and expertise will guide my client through instead of pure muscle.
 							</p>
 
 							<!-- Section -->
@@ -107,7 +109,7 @@
 								<section>
 									<header>
 										<h3>Canfitpro Certification</h3>
-										<p>On the right is the Certification, I have now, in the future I hope to fulfill this gallary and excited for the furture journey</p>
+										<p>It is the Certification, I have now, in the future I hope to fulfill this gallary and excited for the furture journey</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -120,7 +122,7 @@
 								<section>
 									<header>
 										<h3>Competetion</h3>
-										<p>I am competing in McMaster JiuJi-stu team right now, on the right is the link of video I get second place in McMaster 155-175 weight class</p>
+										<p>I am competing in McMaster JiuJit-stu team right now, on the right is the link of video I get second place in McMaster 155-175 weight class</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -139,10 +141,10 @@
 						</header>
 						<div class="content">
 							<p><strong>As a Kinesiology student</strong> I am trying to create some content and give some indication for fitness in the future. Here is the little red book and in this site. I mean hopefully in the future. </p>
-							<ul class="actions">
+							<!-- <ul class="actions">
 								<li><a href="#" class="button primary large">Get Started</a></li>
 								<li><a href="#" class="button large">Learn More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
