--- a/index-chinese.html
+++ b/index-chinese.html
@@ -60,7 +60,8 @@
 							<h2>我的专注领域</h2>
 						</header>
 						<div class="content">
-							<p><strong>不难看出其实我并不是一名肌肥大的教练</strong> 由于我的运动对于我的体重和量级有较高的要求，我不得不时刻关注我的体重并且进行减重。
+							<p><strong>Q:</strong>你看起来并没有那么有肌肉，那你如何指导我健身</p>
+							<p><strong>A:</strong>不难看出其实我并不是一名肌肥大的教练, 由于我的运动对于我的体重和量级有较高的要求，我不得不时刻关注我的体重并且进行减重。
 							但是我对于提升耐力，提升运动表现和减脂有着丰富的经验。我的理念是建立有用的肌肉，而不影响到顾客的运动范围，体重和运动表现。 </p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-dumbbell">提升运动表现</li>
