--- a/index-chinese.html
+++ b/index-chinese.html
@@ -46,7 +46,7 @@
 							<h2>关于我</h2>
 						</header>
 						<div class="content">
-							<p><strong>我是William，一名大四的运动机能学学生，并且是一位认证的健身教练</strong> 其实我身为运动员的经验是远远超过于我作为健身教练的经验的，
+							<p><strong>我是William，一名大四的运动机能学学生，并且是一位认证的健身教练</strong> 我同时拥有身为运动员和健身教练的经验，
 								在加拿大高中的时候，我就曾是摔跤和长跑队的一员。直到现在，我是一名McMaster柔术队的一员.。
 								现在我运用我身为运动员的经验和运动机能学的知识帮助我的顾客达到他们的目标和提升运动表现
 							</p>
@@ -60,9 +60,11 @@
 							<h2>我的专注领域</h2>
 						</header>
 						<div class="content">
-							<p><strong>Q:</strong>你看起来并没有那么有肌肉，那你如何指导我健身</p>
-							<p><strong>A:</strong>不难看出其实我并不是一名肌肥大的教练, 由于我的运动对于我的体重和量级有较高的要求，我不得不时刻关注我的体重并且进行减重。
-							但是我对于提升耐力，提升运动表现和减脂有着丰富的经验。我的理念是建立有用的肌肉，而不影响到顾客的运动范围，体重和运动表现。 </p>
+							<p><strong>Q:</strong>你看起来并没有那么强壮，你如何指导我如何健身呢？</p>
+							<p><strong>A:</strong>我了解很多顾客的疑问, 一位没有那么“大”的健身教练真的可以给我带来我想要的结果吗，但是决定一名教练的绝对不仅仅是他的肌肥大，
+								更多的是他的知识和专业水平不是每个人训练的目的都是更大的肌肉，有些人追求的是更好的身体组成，生活质量以及运动表现。我相信我在诊所，运动和健身
+								领域的经验，可以让我的顾客得到他们想要的结果。
+							</p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-dumbbell">提升运动表现</li>
 								<li class="icon solid fa-exchange-alt">改变身体组成</li>
@@ -105,8 +107,8 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Canfitpro 证书</h3>
-										<p>右边是我目前在canfitpro的证书，我很期待在未来有机会增加我证书的数量并且期盼这段精彩的旅程</p>
+										<h3>证书</h3>
+										<p>这是我目前在canfitpro的证书，我很期待在未来有机会增加我证书的数量并且期盼这段精彩的旅程</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
