--- a/index-chinese.html
+++ b/index-chinese.html
@@ -140,10 +140,10 @@
 						</header>
 						<div class="content">
 							<p><strong>作为一个运动机能学学生</strong> 我在未来会尝试产出一些有用的训练笔记和建议（大概率在小红书上就是了）</p>
-							<ul class="actions">
+							<!-- <ul class="actions">
 								<li><a href="#" class="button primary large">点这</a></li>
 								<li><a href="#" class="button large">更多</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
