--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<header>
 							
 							<h1>Hi, I am William</h1>
-							<p>A personal trainer<br> with 4 years of experience</p>
+							<p>personal trainer<br> with 4 years of experience</p>
 							<ul >
 								<label class="language-switcher" id="languageToggle">
 									<input type="checkbox">
