change of grammar

--- a/index-chinese.html
+++ b/index-chinese.html
@@ -27,8 +27,8 @@
 								<label class="language-switcher" id="languageToggle">
 									<input type="checkbox">
 									<span class="slider round"></span>
-									<span class="select-fr">CH</span>
-									<span class="select-en">EN</span>
+									<span class="select-fr">中</span>
+									<span class="select-en">   EN</span>
 								  </label>
 							</ul>
 							<ul class="actions">
@@ -46,8 +46,11 @@
 							<h2>关于我</h2>
 						</header>
 						<div class="content">
-							<p><strong>我是William，一名大四的运动机能学学生，并且是一位认证的健身教练</strong> 我同时拥有身为运动员和健身教练的经验，
-								在加拿大高中的时候，我就曾是摔跤和长跑队的一员。直到现在，我是一名McMaster柔术队的一员.。
+							<p><strong>我是William，一名大四麦马斯特的运动机能学学生，并且是一位认证的健身教练</strong> 我同时拥有身为运动员和健身教练的经验，
+								<li>长跑</li>
+								<li>自由式摔跤</li>
+								<li>巴西柔术</li>
+								<br>
 								现在我运用我身为运动员的经验和运动机能学的知识帮助我的顾客达到他们的目标和提升运动表现
 							</p>
 							<span class="image main"><img src="images/gallery/fulls/training-11.jpg" alt="" /></span>
@@ -60,11 +63,8 @@
 							<h2>我的专注领域</h2>
 						</header>
 						<div class="content">
-							<p><strong>Q:</strong>你看起来并没有那么强壮，你如何指导我如何健身呢？</p>
-							<p><strong>A:</strong>我了解很多顾客的疑问, 一位没有那么“大”的健身教练真的可以给我带来我想要的结果吗，但是决定一名教练的绝对不仅仅是他的肌肥大，
-								更多的是他的知识和专业水平不是每个人训练的目的都是更大的肌肉，有些人追求的是更好的身体组成，生活质量以及运动表现。我相信我在诊所，运动和健身
-								领域的经验，可以让我的顾客得到他们想要的结果。
-							</p>
+							<p>由于我的运动对于我的体重和量级有较高的要求，我不得不时刻关注我的体重并且进行减重。并且我的训练目标不是更大的肌肉。
+							但是我对于提升耐力，提升运动表现和减脂有着丰富的经验。我的理念是建立有用的肌肉，而不影响到顾客的运动范围，体重和运动表现。 </p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-dumbbell">提升运动表现</li>
 								<li class="icon solid fa-exchange-alt">改变身体组成</li>
@@ -84,8 +84,10 @@
 							<h2>更多的问题</h2>
 						</header>
 						<div class="content">
-							<p><strong>我了解很多顾客的疑问</strong> 一位没有那么“大”的健身教练真的可以给我带来我想要的结果吗，但是决定一名教练的绝对不仅仅是他的肌肥大，
-								更多的是他的知识和专业水平不是每个人训练的目的都是更大的肌肉，有些人追求的是更好的身体组成，生活质量以及运动表现。
+							<p><strong>Q:</strong>你看起来并没有那么强壮，你如何指导我如何健身呢？</p>
+							<p><strong>A:</strong>我了解很多顾客的疑问, 一位没有那么“大”的健身教练真的可以给我带来我想要的结果吗，但是决定一名教练的绝对不仅仅是他的肌肥大，
+								更多的是他的知识和专业水平不是每个人训练的目的都是更大的肌肉，有些人追求的是更好的身体组成，生活质量以及运动表现。我相信我在诊所，运动和健身
+								领域的经验，可以让我的顾客得到他们想要的结果。
 							</p>
 
 							<!-- Section -->
@@ -108,7 +110,6 @@
 								<section>
 									<header>
 										<h3>证书</h3>
-										<p>这是我目前在canfitpro的证书，我很期待在未来有机会增加我证书的数量并且期盼这段精彩的旅程</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -121,7 +122,7 @@
 								<section>
 									<header>
 										<h3>竞赛</h3>
-										<p>这是我在McMaster 柔术比赛 155到175的量级中拿到了亚军的视频，期望在未来有着可以参加更多竞赛的机会</p>
+										<p>这是我在McMaster 柔术比赛 155到175的量级中拿到了亚军的视频</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -134,18 +135,18 @@
 					</section>
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>个人博客</h2>
 						</header>
 						<div class="content">
-							<p><strong>作为一个运动机能学学生</strong> 我在未来会尝试产出一些有用的训练笔记和建议（大概率在小红书上就是了）</p>
+							<p><strong>作为一个运动机能学学生</strong> 我在未来会尝试产出一些有用的训练笔记和建议（大概率在小红书上就是了）</p> -->
 							<!-- <ul class="actions">
 								<li><a href="#" class="button primary large">点这</a></li>
 								<li><a href="#" class="button large">更多</a></li>
 							</ul> -->
-						</div>
-					</section>
+						<!-- </div>
+					</section> -->
 
 				<!-- Elements -->
 				<!--
@@ -426,14 +427,14 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						<div class="popup" onclick="myFunction(this)">
 							<strong>摄影师/ 吴</strong>
 							<span class="popuptext">
-							  <img src="images/gallery/fulls/profile2.jpg" alt="Image" width="150" height="150">
+							  <img src="images/gallery/fulls/profile2.jpg" alt="Image" width="250" height="250">
 							</span>
 						  </div>
 						  <br>
 						  <div class="popup" onclick="myFunction(this)">
 							<strong>网站编程和设计/ 小🐉</strong>
 							<span class="popuptext">
-							  <img src="images/gallery/fulls/profile3.png" alt="Image" width="150" height="150">
+							  <img src="images/gallery/fulls/profile3.png" alt="Image" width="250" height="250">
 							</span>
 						  </div>
 						</div>
@@ -458,7 +459,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 											<li><a class="icon brands alt fa-weixin"><span class="label">WeChat</span></a></li>
 										</ul>
 										<span class="popuptext">
-										  <img src="images/gallery/fulls/profile4.jpg" alt="Image" width="150" height="150">
+										  <img src="images/gallery/fulls/profile4.jpg" alt="Image" width="250" height="250">
 										</span>
 									  </div>
 								</li>
