--- a/index-chinese.html
+++ b/index-chinese.html
@@ -64,7 +64,7 @@
 						</header>
 						<div class="content">
 							<p>由于我的运动对于我的体重和量级有较高的要求，我不得不时刻关注我的体重并且进行减重。并且我的训练目标不是更大的肌肉。
-							但是我对于提升耐力，提升运动表现和减脂有着丰富的经验。我的理念是建立有用的肌肉，而不影响到顾客的运动范围，体重和运动表现。 </p>
+							但是我对于提升耐力，提升运动表现和减脂有着丰富的经验。 </p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-dumbbell">提升运动表现</li>
 								<li class="icon solid fa-exchange-alt">改变身体组成</li>
